--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,12 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-      - name: "Check out code"
+      - name: 'Check out code'
         uses: actions/checkout@v2
-      - name: "Set up Go"
+      - name: 'Set up Go'
         uses: actions/setup-go@v2
         with:
-          go-version: 1.17.x
+          go-version: 1.18.x
 
       - name: build
         run: go build
