--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,5 +12,5 @@ jobs:
         with:
           go-version: 1.18.x
 
-      - name: build
-        run: go build
+      - name: test
+        run: go test ./test -v
