--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,4 @@ jobs:
           go-version: 1.18.x
 
       - name: test
-        run: go test ./test -v
+        run: TERM=xterm-256color CI= go test ./test -v
