--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,13 @@ jobs:
           go-version: 1.18.x
 
       - name: test
-        run: go test ./test -v
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d
+          ./bin/task covTest
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          files: ./coverage.out
+          verbose: true
+          fail_ci_if_error: true
